<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/room_create_task_received_linear">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:text="@string/received_task_title"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/received_task_list"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="false"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="170dp">

        <Button
            android:layout_gravity="center|bottom"
            android:layout_width="240dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:background="@color/mainBlue"
            android:text="@string/button_send_task"
            android:textColor="@color/white"
            android:onClick="assignTask"/>

        <Button
            android:layout_gravity="center|bottom"
            android:layout_width="240dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:background="@color/mainBlue"
            android:text="@string/button_return_home"
            android:textColor="@color/white"
            android:onClick="returnToHome"/>

        <Button
            android:layout_gravity="center|bottom"
            android:id="@+id/room_close"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:onClick="closeRoom"
            android:text="@string/button_close_room"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>

