<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/activity_main">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logo"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:visibility="gone"
            android:id="@+id/launch_app_manager_button"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/mainBlue"
            android:onClick="launchAppManagerActivity"
            android:text="@string/launch_app_manager_activity"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/lock_button"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:background="@color/mainBlue"
            android:onClick="launchLockActivity"
            android:text="@string/launch_lock_activity"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/launch_task_button"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/mainBlue"
            android:onClick="launchTaskActivity"
            android:text="@string/launch_task_activity"
            android:textColor="@color/white" />

        <Button
            android:onClick="launchIrisActivity"
            android:id="@+id/launch_iris_button"
            android:text="@string/iris_mode"
            android:background="@color/mainBlue"
            android:textColor="@color/white"
            android:layout_width="240dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>